tests/invalid/Final_Invalid_5.whiley
function f(final int x) -> (int r):
    //
    while x < 10:
        x = x + 1
    //
    return x